--- a/wxApp/shopping/pages/cart/cart.wxml
+++ b/wxApp/shopping/pages/cart/cart.wxml
@@ -1,32 +1,36 @@
-<!--pages/cart/cart.wxml-->
 <view class="main">
-  <view>
+  <view wx:if="{{hasList}}">
     <view class="cart-box">
-      <view class="cart-list" wx:for="{{carts}}" wx:key="index">
-        <icon wx:if="{{item.selected}}" class="cart-pro-select" type="success" size="23" color="red" bindtap="selectList" data-index="{{index}}"></icon>
-        <icon wx:else class="cart-pro-select" type="success" size="23" color="#d9d9d9" bindtap="selectList" data-index="{{index}}"></icon>
+      <view class="cart-list" wx:for="{{carts}}" wx:key="{{index}}">
+        <icon wx:if="{{item.selected}}" class="cart-pro-select" type="success" size="23" color="red" data-index="{{index}}" bindtap="selectList"></icon>
+        <icon wx:else class="cart-pro-select" type="circle" size="23" color="red" data-index="{{index}}" bindtap="selectList"></icon>
 
-        <navigator class="cart-pro-goods" url="">
-          <image class="cart-thumb" src="{{item.image}}" />
+        <navigator class="cart-pro-goods" url="../details/details?id={{item.id}}">
+          <image class="cart-thumb" src="{{item.image}}"></image>
         </navigator>
-
         <text class="cart-pro-name">{{item.title}}</text>
         <text class="cart-pro-price">{{item.price}}</text>
-
         <view class="cart-count-box">
-          <text class="cart-count-down">-</text>
+          <text class="cart-count-down" bindtap="minusCount" data-index="{{index}}">-</text>
           <text class="cart-count-num">{{item.num}}</text>
-          <text class="cart-count-add">+</text>
+          <text class="cart-count-down" bindtap="addCount" data-index="{{index}}">+</text>
         </view>
-        <text class="cart-del">x</text>
+        <text class="cart-del" bindtap="deletelist" data-index="{{index}}">x</text>
       </view>
     </view>
-
     <view class="cart-footer">
-      <icon wx:if="{{selectAllStatus}}" class="total-select" type="success" size="23" color="red" bindtap="selectAll"></icon>
-      <icon wx:else class="total-select" type="success" size="23" color="white" bindtap="selectAll"></icon>
+      <icon wx:if="{{selectAllStatus}}" class="total-select" type="success_circle" size="23" color="white" bindtap="selectAll"></icon>
+      <icon wx:else class="total-select" type="circle" size="23" color="white" bindtap="selectAll"></icon>
+      <navigator url="../../orders/orders">
+        <view class="order-icon">
+          <image class="" src="../../image/icon3.png"></image>
+        </view>
+      </navigator>
       <text>全选</text>
-      <text class="cart-total-price">¥{{totalPrice}}</text>
+      <text class="cart-total-price">￥{{totalPrice}}</text>
     </view>
+  </view>
+  <view wx:else>
+    <view class="cart-no-data">购物车是空的哦~</view>
   </view>
 </view>
