--- a/wxApp/shopping/pages/cart/cart.wxss
+++ b/wxApp/shopping/pages/cart/cart.wxss
@@ -3,52 +3,60 @@
   padding-bottom: 100rpx;
 }
 .cart-list{
+  position: relative;
   padding: 20rpx 20rpx 20rpx 285rpx;
   height: 185rpx;
-  border-bottom: 1px solid #e9e9e9;
-  position: relative;
+  border-bottom: 1rpx solid #e9e9e9;
 }
-.cart-pro-select{
+.cart-list .cart-pro-select{
   position: absolute;
   left: 20rpx;
   top: 90rpx;
   width: 45rpx;
   height: 45rpx;
 }
-.cart-pro-goods{
-  position: absolute;
-  left: 85rpx;
-}
-.cart-thumb{
+
+.cart-list .cart-thumb{
+  /* position: absolute;
+  top: 20rpx;
+  left: 85rpx; */
   width: 185rpx;
   height: 185rpx;
 }
-.cart-pro-name{
+.cart-list .cart-pro-goods{
+position: absolute;
+left: 85rpx;
+}
+.cart-list .cart-pro-goods, .cart-pro-goods image{
+width: 180rpx;
+height: 180rpx;
+}
+.cart-list .cart-pro-name{
   display: inline-block;
   width: 300rpx;
   height: 105rpx;
   line-height: 50rpx;
   overflow: hidden;
 }
-.cart-pro-price{
+.cart-list .cart-pro-price{
+  display: inline-block;
   float: right;
   height: 105rpx;
   line-height: 50rpx;
 }
-.cart-count-box{
+.cart-list .cart-count-box{
   position: absolute;
   left: 285rpx;
   bottom: 20rpx;
   width: 250rpx;
   height: 80rpx;
 }
-.cart-count-box text{
+.cart-list .cart-count-box text{
   display: inline-block;
   line-height: 80rpx;
   text-align: center;
 }
-.cart-count-down,
-.cart-count-add{
+.cart-count-down,.cart-count-add{
   font-size: 44rpx;
   width: 50rpx;
   height: 100%;
@@ -69,12 +77,13 @@
 .cart-footer{
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 90rpx;
   line-height: 90rpx;
-  padding: 0 100rpx 0 80rpx;
-  background: #AB956D;
+  padding:0 100rpx 0 80rpx;
   box-sizing: border-box;
+  background: #AB956D;
   color: #fff;
 }
 .total-select{
@@ -83,4 +92,27 @@
   top: 25rpx;
   width: 45rpx;
   height: 45rpx;
+}
+.order-icon{
+  position: absolute;
+  right: 40rpx;
+  top: 25rpx;
+  width: 45rpx;
+  height: 45rpx;
+  background-size: 100%;
+}
+.order-icon image{
+width: 100%;
+height: 100%;
+
+}
+.cart-toatl-price{
+  float: right;
+  width: 120rpx;
+}
+
+.cart-no-data{
+  padding:40rpx 0;
+  color: #999;
+  text-align: center;
 }
