--- a/wxApp/shopping/pages/index/index.wxss
+++ b/wxApp/shopping/pages/index/index.wxss
@@ -1,51 +1,56 @@
 /* pages/index/index.wxss */
 swiper{
-  height: 421rpx;
+  height: 421.5rpx;
 }
-.slide-image{
+swiper-item image{
   width: 100%;
   height: 100%;
 }
-.select-title,
-.newest-title{
-  text-align: center;
+.select-title, .newest-title {
+  width: 100%;
   padding: 30rpx 0;
+  height: 40rpx;
   color: #ab956d;
+  text-align: center;
 }
 .select-top,
 .select-bottom{
   width: 100%;
   height: 375rpx;
 }
-.select-top__small{
+.select-top-small{
   width: 375rpx;
-  height: 100%;
+  height: 375rpx;
   float: left;
 }
-.select-top__small navigator,
-.select-top__small image,
+.select-top-small image, 
+.select-top-small navigator,
 .select-bottom navigator,
 .select-bottom image{
+  display: block;
   width: 100%;
   height: 100%;
 }
-.newest-box{
-  padding: 0 40rpx;
+.newest-box {
+    padding:0 40rpx;
 }
-.newest-list{
-  display: inline-block;
-  width: 325rpx;
-  height: 325rpx;
-  margin: 0 20rpx 20rpx 0;
-  border-radius: 10px;
-  background: #f5f6f5;
-  text-align: center;
+.newest-box .newest-list{
+    display: inline-block;
+    width: 325rpx;
+    height: 325rpx;
+    margin:0 20rpx 20rpx 0;
+    border-radius: 10px;
+    text-align: center;
+    background: #f5f6f5;
 }
-.newest-list:nth-child(2n) {
-  margin-right: 0;
+.newest-box .newest-list:nth-child(2n){
+    margin-right: 0;
 }
-.newest-list image{
-  width: 175rpx;
-  height: 175rpx;
-  margin: 20rpx 0 10rpx;
+.newest-box .newest-list image{
+    width: 175rpx;
+    height: 175rpx;
+    margin: 20rpx 0 10rpx;
+}
+.newest-box .newest-list .newest-text{
+    font-size: 32rpx;
 }
